# Vol-3-final-project

./: .env  .gitignore  README.md  analyze.py  compute.py  config.py  mvo.py  pipeline.py  prompt.md  pyproject.toml  run.py  submit.py  timing.py  train.py  useful_commands.md
configs/: __init__.py  default.py  gpr_krr.py  test.py
models/: __init__.py  base.py  binned_kalman.py  gaussian_process_regression.py  kalman_poly.py  kernel_ridge_regression.py  nadaraya_watson.py  rbf_rls.py  static.py
paper/: paper.tex  slides.tex  template.tex  writeup.tex
results/recent/: backtest_report.txt
results/recent2/: backtest_report.txt
results/test/: backtest_report.txt
scripts/: blob_chart.py
signals/: __init__.py  _asset_signal.py  _factor_signal.py  betting_against_beta.py  idiosyncratic_momentum.py  idiosyncratic_reversal.py  idiosyncratic_volatility.py  industry_momentum.py  industry_reversal.py  style_momentum.py  style_reversal.py
src/data/: synthetic.py
src/experiments/: run_synthetic.py
src/utils/: plotting.py
tests/: test_config.py  test_models.py  test_pipeline.py
